[package]
name = "BallerMentality"
version = "0.1.0"
edition = "2024"

[dependencies]

[workspace]
members = [
    "crates/bm",
    "crates/bm-core",
    "crates/bm-web",
]


[[bin]]
name = "app"
path = "crates/bm-core/src/main.rs"
#path = "src/my_app/main.rs"

#[workspace.package]
#version = "0.1.0"
#publish = false

[workspace.dependencies]
poem = "3.0.0"
#poem = "3.1.9"
poem-openapi = { version = "5", features = ["swagger-ui"] }
tokio = { version = "1.26", features = ["macros", "rt-multi-thread"] }
#tracing-subscriber = "0.3"
 shuttle-poem = "0.53.0"
 shuttle-runtime = "0.53.0"
